snapfirewall (1.0.16.0~xenial) xenial; urgency=high

  * SNAP-465: Moved the LOG to /etc/log/iptables.log instead of kern.log.

 -- Alexis Wilke <alexis@m2osw.com>  Fri, 21 Oct 2016 14:32:49 -0700

snapfirewall (1.0.15.0~xenial) xenial; urgency=high

  * SNAP-461: Removed "Requires=..." since all servers can run by themselves.

 -- Alexis Wilke <alexis@m2osw.com>  Wed, 19 Oct 2016 12:21:49 -0700

snapfirewall (1.0.14.0~xenial) xenial; urgency=high

  * SNAP-481: Use 1,000 as the RLIMIT_NPROC. It is per user, not process.

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 15 Oct 2016 17:59:49 -0700

snapfirewall (1.0.13.0~xenial) xenial; urgency=high

  * SNAP-481: Drastically limit the number of sub-processes the snapbackend
    can create between 100 and 1,000.
  * Removed the duplicated definition of "NoNewPrivileges=...".

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 15 Oct 2016 12:07:49 -0700

snapfirewall (1.0.12.0~xenial) xenial; urgency=high

  * SNAP-266: snap_child recreates snapcom messenger with thread.
  * Default is to use file logging and logging to snapcommunicator.
  * Also took out all loggingserver API and properties files.

 -- R. Douglas Barbieri <doug@dooglio.net>  Wed, 12 Oct 2016 14:49:23 -0700

snapfirewall (1.0.11.0~xenial) xenial; urgency=high

  * SNAP-355: Fixed the test for scheme validity to check in the new
    sub-directory (/etc/iplock/schemes/...)

 -- Alexis Wilke <alexis@m2osw.com>  Tue, 11 Oct 2016 15:45:37 -0700

snapfirewall (1.0.10.0~xenial) xenial; urgency=high

  * SNAP-355: Cleaned up the firewall implmentation.

 -- Alexis Wilke <alexis@m2osw.com>  Fri, 07 Oct 2016 11:31:40 -0700

snapfirewall (1.0.9.0~xenial) xenial; urgency=high

  * SNAP-110: Will output its own version instead of the libsnapwebsites one.

 -- Alexis Wilke <alexis@m2osw.com>  Fri, 07 Oct 2016 11:31:40 -0700

snapfirewall (1.0.8.0~xenial) xenial; urgency=high

  * SNAP-413: Replaced the snapcreatetables call with the NEWTABLE signal.
