@@ -1,0 +1,21 @@
+# iptables
+#
+# We moved the iptable LOG to iptables.log so we have to make sure it
+# gets rotated. This file is here for that purpose.
+#
+/var/log/iptables.log {
+    weekly
+    maxsize 1M
+    su syslog adm
+    missingok
+    rotate 10
+    postrotate
+        invoke-rc.d rsyslog rotate > /dev/null
+    endscript
+    compress
+    delaycompress
+    notifempty
+    create 640 syslog adm
+}
+
+# vim: ts=4 sw=4 et
