@@ -1,0 +1,30 @@
+# Fail2Ban configuration file
+#
+# Expect scheme to be defined when calling the action as in:
+#      action=snap-firewall-action[scheme=http]
+#
+
+[Init]
+
+# Default scheme is "http"
+#
+scheme = http
+
+# Default period is "year"
+#
+# Supported periods are "day", "week", "month", "year", "forever".
+#
+period = year
+
+[Definition]
+
+# Send a BLOCK message to our firewall which then spreads the IP address
+# to all our computers in a cluster.
+#
+actionban = snapsignal "*/BLOCK uri=<scheme>://<ip>;period=<period>"
+
+#
+# We do not need a start/stop/check/unban -- all of that is done by
+# either snapfirewall or iplock.
+#
+
