@@ -1,0 +1,30 @@
+# Fail2Ban filter for the firewall installed by snapfirewall
+#
+# snapfirewall intalls a set of IPv4 and IPv6 rules that make use of the
+# LOG command in order to get information about various attacks and list
+# offensive IP addresses.
+#
+# The LOG data goes to a file named /var/log/iptables.log which this
+# filter check for repetitive blocks. IPs are already blocked when they
+# get LOGed in that file, but they generate that log data which after
+# a while is a bit repetitive and useless so we re-block them in the
+# "unwanted" chain without a LOG.
+#
+
+[INCLUDES]
+
+before = common.conf
+
+[Definition]
+
+_daemon = snapfirewall
+
+# All entries should include a SRC and a PROTO, at this time we limit
+# out filtering on TCP, but UDP is probably a good idea too.
+#
+failregex = SRC=<HOST>.*PROTO=TCP
+
+[Init]
+
+datepattern = ^%%b %%d %%H:%%M:%%S
+
