@@ -1,0 +1,27 @@
+# Fail2Ban jail configuration files
+#
+# These jails use the snap-firewall-action which allow us to ban an
+# IP address in our entire cluster and not just on this computer by
+# sending a signal to our snapfirewall daemon.
+#
+
+
+# The snap-iptables scans the /var/log/iptables.log which is a set of
+# kernel log as coming from LOG rules in the iptables firewall.
+#
+# If the same IP address tried to access our services for 5 times or
+# more and got blocked within the last 1h, block the IP for a year.
+#
+# Note: the fail2ban "bantime" is not used. There is no unban in
+#       the action configuration so no unban even if the logs will
+#       tell you that fail2ban unbans some IPs, for our jail, it
+#       does nothing
+#
+[snap-iptables]
+enabled  = true
+filter   = snap-iptables-filter
+action   = snap-firewall-action[scheme=http,pediod=year]
+logpath  = /var/log/iptables.log
+maxretry = 5
+findtime = 3600
+
