@@ -35,6 +35,10 @@ then
     # We added the 01-iptables.conf file, make sure it is taken in account
     #
     invoke-rc.d rsyslog restart
+
+    # We install some files for fail2ban, so we need to restart it
+    #
+    systemctl reload fail2ban
 fi
 
 # vim: ts=4 sw=4 et nocindent
